# Mtech_Thesis

./: README.md
src/: EDA.ipynb
version-1/: Dockerfile  TO-DO-NEXT.txt  docker-compose.yml  pyproject.toml  requirements.txt  sanity_check.py
version-2/: Dockerfile  Makefile  README.md  TO-DO-NEXT.txt  dataset.py  docker-compose.yml  health_check.py  pyproject.toml  requirements.txt  sanity_check.py  train.py
version-2/Local Similarity/: split_strategy.py
version-2/docs/: mkdocs.yml
version-2/docs/docs/: index.md
