[project]
name = "version-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fiona>=1.10.1",
    "ipykernel>=7.1.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "rasterio>=1.4.4",
    "ruff>=0.14.10",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchgeo>=0.8.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
